--- a/index.html
+++ b/index.html
@@ -94,8 +94,36 @@
 
             </div>
         </div>
-        
-        <div class="main-content">Mian- main-content </div>
+
+        <div class="main-content">
+            <div class="header">
+                <div class="header-element">
+                    <div class="img">
+                        <img src="./assets/backward_icon.png">
+                        <img src="./assets/forward_icon.png">
+                    </div>
+                    <div class="explore"><a href="#">Explore Premium</a></div>
+                    <div class="install"><a href="#">Install App</a></div>
+                </div>
+            </div>
+
+            <div class="menu">
+                <a href="#" id="all">All</a>
+                <a href="#" id="music">Music</a>
+                <a href="#" id="podcast">Podcasts</a>
+            </div>
+
+            <div class="played">
+                <div class="line">
+                    <img src="./assets/card1img.jpeg">
+                    <a href="#">Top 50 Global</a>
+                </div>
+                <div class="line">
+                    <img src="./assets/card1img.jpeg">
+                    <a href="#">Top 50 Global</a>
+                </div>
+            </div>
+        </div>
         <div class="music-player">music-player</div>
     </div>
 </body>
