--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
         </div>
 
         <div class="main-content">
+            <div class="sticky">
             <div class="header">
                 <div class="header-element">
                     <div class="img">
@@ -112,15 +113,144 @@
                 <a href="#" id="music">Music</a>
                 <a href="#" id="podcast">Podcasts</a>
             </div>
+        </div>
 
             <div class="played">
-                <div class="line">
-                    <img src="./assets/card1img.jpeg">
-                    <a href="#">Top 50 Global</a>
+                <div class="posterr two">
+                    <img src="./assets//AD.jpeg" class="twoo-img">
+                    <a>Ad Sheren</a>
                 </div>
-                <div class="line">
-                    <img src="./assets/card1img.jpeg">
-                    <a href="#">Top 50 Global</a>
+                <div class="posterr two">
+                    <img src="./assets/Tending.jpeg" class="twoo-img">
+                    <a>Trending Now India</a>
+                </div>
+                <div class="posterr two">
+                    <img src="./assets/card6img.jpeg" class="twoo-img">
+                    <a>Top Songs India</a>
+                </div>
+                <div class="posterr two">
+                    <img src="./assets/Chill_vibes.jpeg" class="twoo-img">
+                    <a>Chill Vibes</a>
+                </div>
+            </div>
+            <div class="played">
+                <div class="posterr two">
+                    <img src="./assets/Playlist_by_justin.jpeg" class="twoo-img">
+                    <a href="#">Hottest This Week</a>
+                </div>
+                <div class="posterr two">
+                    <img src="./assets/card2img.jpeg" class="twoo-img">
+                    <a>Mahiye Jinna Sohna</a>
+                </div>
+                <div class="posterr two">
+                    <img src="./assets/card5img.jpeg" class="twoo-img">
+                    <a>Top Songs Global</a>
+                </div>
+                <div class="posterr two">
+                    <img src="./assets/Roy.jpeg" class="twoo-img">
+                    <a>Roy</a>
+                </div>
+            </div>
+
+            <h2>Made For You</h2>
+            <div class="card-container">
+                <div class="card">
+                    <img src="./assets/Safar.jpeg" class="card-img">
+                    <p class="card-title">Classic Safar Hits</p>
+                    <p class="card-info">Your playlist for a nostalgic drive.</p>
+                </div>
+                <div class="card">
+                    <img src="./assets/Soft_Music.jpeg" class="card-img">
+                    <p class="card-title">Soft Music Playlist</p>
+                    <p class="card-info">Soft and Smooth Hindi Songs</p>
+                </div>
+                <div class="card">
+                    <img src="./assets/Taylor_playlist.jpeg" class="card-img">
+                    <p class="card-title">Taylor Swift</p>
+                    <p class="card-info">The essential tracks, all in one playlist.</p>
+                </div>
+                <div class="card">
+                    <img src="./assets/Bollywood.jpeg" class="card-img">
+                    <p class="card-title">Bollywood</p>
+                    <p class="card-info">Bollywood Central, jab baje toh..</p>
+                </div>
+                <div class="card">
+                    <img src="./assets/Hot_hits.jpeg" class="card-img">
+                    <p class="card-title">Hot Hits India</p>
+                    <p class="card-info">Hottest Hindi music served here.</p>
+                </div>
+                <div class="card">
+                    <img src="./assets/siddhu.jpeg" class="card-img">
+                    <p class="card-title">Lofi Mix</p>
+                    <p class="card-info">This is Siddhu Moose Wala</p>
+                </div>
+            </div>
+
+            <h2>Your Favourite Artists</h2>
+            <div class="card-container">
+                <div class="card">
+                    <img src="./assets/AP.jpeg" class="card-img art">
+                    <p class="card-title">AP Dhillon</p>
+                    <p class="card-info">Artist</p>
+                </div>
+                <div class="card">
+                    <img src="./assets/atif.jpeg" class="card-img art">
+                    <p class="card-title">Atif Aslam</p>
+                    <p class="card-info">Artist</p>
+                </div>
+                <div class="card">
+                    <img src="./assets/AD.jpeg" class="card-img art">
+                    <p class="card-title">AD Sheren</p>
+                    <p class="card-info">Artist</p>
+                </div>
+                <div class="card">
+                    <img src="./assets/Shubh.jpeg" class="card-img art">
+                    <p class="card-title">Shubh</p>
+                    <p class="card-info">Artist</p>
+                </div>
+                <div class="card">
+                    <img src="./assets/Justin.jpeg" class="card-img art">
+                    <p class="card-title">Justin Bieber</p>
+                    <p class="card-info">Artist</p>
+                </div>
+                <div class="card">
+                    <img src="./assets/Kishor.jpeg" class="card-img art">
+                    <p class="card-title">Kishor Kumar</p>
+                    <p class="card-info">Artist</p>
+                </div>
+            </div>
+
+            <h2>Popular Album</h2>
+            <div class="card-container">
+                <div class="card">
+                    <img src="./assets/sajni.jpeg" class="card-img">
+                    <p class="card-title">Sajni(From...</p>
+                    <p class="card-info">Ram Sampath,Arijit Singh,Prashant..</p>
+                </div>
+                <div class="card">
+                    <img src="./assets/aashiqui.jpeg" class="card-img">
+                    <p class="card-title">Aashiqui 2</p>
+                    <p class="card-info">Mithoon,Ankit Tiwari,Jeet Gaanguli</p>
+                </div>
+                <div class="card">
+                    <img src="./assets/lover.jpeg" class="card-img">
+                    <p class="card-title">Lover</p>
+                    <p class="card-info">Taylor Swift</p>
+                </div>
+                <div class="card">
+                    <img src="./assets/With_you.jpeg" class="card-img">
+                    <p class="card-title">With You</p>
+                    <p class="card-info">AP Dhillon</p>
+                </div>
+                <div class="card">
+                    <img src="./assets/Safar_song.jpeg" class="card-img">
+                    <p class="card-title">Safar</p>
+                    <p class="card-info">Juss,MixSingh</p>
+                </div>
+                <div class="card">
+                    <img src="./assets/Saajan_ve.jpeg" class="card-img">
+                    <p class="card-title">Saajan Ve</p>
+                    <p class="card-info">Darshan Raval</p>
                 </div>
             </div>
         </div>
